--- a/package.json
+++ b/package.json
@@ -12,12 +12,18 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@rocketseat/eslint-config": "2.1.0",
     "@types/node": "20.5.2",
+    "@typescript-eslint/eslint-plugin": "^5.0.0",
+    "@typescript-eslint/parser": "^5.0.0",
+    "eslint": "8.47.0",
+    "prisma": "5.2.0",
     "tsup": "7.2.0",
     "tsx": "3.12.7",
     "typescript": "5.1.6"
   },
   "dependencies": {
+    "@prisma/client": "5.2.0",
     "dotenv": "16.3.1",
     "fastify": "4.21.0",
     "zod": "3.22.2"
