--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "scripts": {
     "dev": "tsx watch src/server.ts",
     "start": "node build/server.js",
-    "build": "tsup src --out-dir build"
+    "build": "tsup src --out-dir build",
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:coverage": "vitest run --coverage"
   },
   "keywords": [],
   "author": "",
@@ -17,11 +20,14 @@
     "@types/node": "20.5.2",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
+    "@vitest/coverage-v8": "0.34.2",
     "eslint": "8.47.0",
     "prisma": "5.2.0",
     "tsup": "7.2.0",
     "tsx": "3.12.7",
-    "typescript": "5.1.6"
+    "typescript": "5.1.6",
+    "vite-tsconfig-paths": "4.2.0",
+    "vitest": "0.34.2"
   },
   "dependencies": {
     "@prisma/client": "5.2.0",
