--- a/package.json
+++ b/package.json
@@ -6,9 +6,13 @@
   "scripts": {
     "dev": "tsx watch src/server.ts",
     "start": "node build/server.js",
+    "test:create-prisma-environment": "npm link ./prisma/vitest-environment-prisma",
+    "test:install-prisma-environment": "npm link vitest-environment-prisma",
     "build": "tsup src --out-dir build",
-    "test": "vitest run",
-    "test:watch": "vitest",
+    "test": "vitest run --dir src/services",
+    "pretest:e2e": "run-s test:create-prisma-environment test:install-prisma-environment",
+    "test:e2e": "vitest run --dir src/http",
+    "test:watch": "vitest src/services",
     "test:coverage": "vitest run --coverage"
   },
   "keywords": [],
@@ -20,14 +24,15 @@
     "@types/node": "20.5.2",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
-    "@vitest/coverage-v8": "0.34.2",
+    "@vitest/coverage-v8": "0.33.0",
     "eslint": "8.47.0",
+    "npm-run-all": "4.1.5",
     "prisma": "5.2.0",
     "tsup": "7.2.0",
     "tsx": "3.12.7",
     "typescript": "5.1.6",
     "vite-tsconfig-paths": "4.2.0",
-    "vitest": "0.34.2"
+    "vitest": "0.33.0"
   },
   "dependencies": {
     "@fastify/jwt": "7.2.0",
