--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "test": "vitest run --dir src/services",
     "pretest:e2e": "run-s test:create-prisma-environment test:install-prisma-environment",
     "test:e2e": "vitest run --dir src/http",
+    "test:e2e:watch": "vitest --dir src/http",
     "test:watch": "vitest src/services",
     "test:coverage": "vitest run --coverage"
   },
@@ -22,12 +23,14 @@
     "@rocketseat/eslint-config": "2.1.0",
     "@types/bcryptjs": "2.4.2",
     "@types/node": "20.5.2",
+    "@types/supertest": "2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
     "@vitest/coverage-v8": "0.33.0",
     "eslint": "8.47.0",
     "npm-run-all": "4.1.5",
     "prisma": "5.2.0",
+    "supertest": "6.3.3",
     "tsup": "7.2.0",
     "tsx": "3.12.7",
     "typescript": "5.1.6",
