--- a/.github/workflows/run-e2e-tests.yml
+++ b/.github/workflows/run-e2e-tests.yml
@@ -15,7 +15,7 @@ jobs:
         environment:
           - POSTGRESQL_USERNAME=docker
           - POSTGRESQL_PASSWORD=docker
-          - POSTGRESQL_DATABASE=api-solid
+          - POSTGRESQL_DATABASE=apisolid
 
     steps:
       - uses: actions/checkout@v3
@@ -25,6 +25,6 @@ jobs:
           cache: 'npm'
       - run: npm ci
       - run: npm run test:e2e
-          env:
-            JWT_TOKEN: testing
-            DATABASE_URL:
+        env:
+          JWT_TOKEN: testing
+          DATABASE_URL: "postgresql://docker:docker@localhost:5432/apisolid?schema=public"
