ci: fix enviroment variable

--- a/.github/workflows/run-e2e-tests.yml
+++ b/.github/workflows/run-e2e-tests.yml
@@ -26,5 +26,5 @@ jobs:
       - run: npm ci
       - run: npm run test:e2e
         env:
-          JWT_TOKEN: testing
+          JWT_SECRET: testing
           DATABASE_URL: "postgresql://docker:docker@localhost:5432/apisolid?schema=public"
